# Real-Time-Edge-Detection

./: .gitignore  README.md  clahe_improv.py  edge_detection_baseline.py  edge_detection_blur.py  edge_detection_hist_blur.py
C++ code/: CMakeLists.txt  EdgeDetector.cpp  bsds_train.csv  bsds_train_autoCanny_0.330000.csv  bsds_train_autoCanny_0.500000.csv  convert_mat_jpg.py  detect_main.cpp  edge_detection.cpp  flicker_motion.cpp  main.cpp  plots.py  rebuild.sh  test.cpp
C++ code/Experiments/: BSDS_tuned.cpp  EdgeDetector.hpp  clahe_improv.cpp
C++ code/Results/: bsds_train_autoCanny.csv  bsds_train_autoCanny_0.400000.csv  bsds_train_autoCanny_0.450000.csv  bsds_train_autoCanny_0.600000.csv
C++ code/backup_code/: RealtimeEdgeDetectionEnhanced.cpp  main_withoutFlicker.cpp
C++ code/custom_implementation/: EdgeDetector.cpp  EdgeDetector.hpp  flicker_motion.cpp  main.cpp
